# strf-benchmarks

./: .gitmodules  CMakeLists.txt  README.md
compilation-benchmarks/: args_shuffle.hpp  fmt_compile_args_shuffle.hpp  run_benchmarks.py  strf_args_shuffle.hpp  to_FILE_fmtlib.cpp  to_FILE_fmtlib_c.cpp  to_FILE_fprintf.cpp  to_FILE_main.cpp  to_FILE_strf.cpp  to_FILE_strf_tr.cpp  to_charptr_fmtlib.cpp  to_charptr_fmtlib_c.cpp  to_charptr_fmtlib_n.cpp  to_charptr_fmtlib_n_c.cpp  to_charptr_main.cpp  to_charptr_sprintf.cpp  to_charptr_strf.cpp  to_charptr_strf_tr.cpp  to_ostream_fmtlib.cpp  to_ostream_fmtlib_c.cpp  to_ostream_main.cpp  to_ostream_strf.cpp  to_ostream_strf_tr.cpp  to_string_fmtlib.cpp  to_string_fmtlib_c.cpp  to_string_main.cpp  to_string_strf.cpp  to_string_strf_tr.cpp
docs/: Makefile  results.adoc
src/: input_float.cpp  input_int.cpp  join.cpp  numpunct.cpp  range.cpp  to_char_ptr.cpp  to_string.cpp  tr_string.cpp  utf16_to_utf8.cpp  utf8_to_utf16.cpp  utf8_to_utf32.cpp  width_calculation.cpp
tools/: CMakeLists.txt  mean_cpu_times.cpp  repeat_benchmarks.sh
v0.14.0/: results.html
v0.15.0/: results.html
v0.15.1/: results.html
v0.15.2/: results.html
v0.15.3/: results.html
v0.16.0/: results.html
